--- a/settings.json
+++ b/settings.json
@@ -1,6 +1,6 @@
 {
   "quizId": "GAME1270-Quiz1",
-  "title": "GAME 1270: Introduction to Game Design and Development — Quiz #1",
+  "title": "GAME 1270: Introduction to Game Design and Development ï¿½ Quiz #1",
   "course": "Introduction to Game Design and Development",
   "logo": "acc_logo.png",
   "sections": [
@@ -13,8 +13,8 @@
   ],
   "emailProvider": "emailjs",
   "emailConfig": {
-    "serviceID": "your_service_id",
-    "templateID": "your_template_id",
-    "publicKey": "your_emailjs_public_key"
+    "serviceID": "service_l412vd9",
+    "templateID": "template_6ftojqe",
+    "publicKey": "4e05gESRCcXdlqDkI"
   }
 }
