Update Public Key

--- a/settings.json
+++ b/settings.json
@@ -15,6 +15,6 @@
   "emailConfig": {
     "serviceID": "service_l412vd9",
     "templateID": "template_6ftojqe",
-    "publicKey": "4e05gESRCcXdlqDkI"
+    "publicKey": "YoOVqMfQaR_h1LIj6"
   }
 }
