Update json with questions and add rendering fill in the blank list

--- a/settings.json
+++ b/settings.json
@@ -12,7 +12,9 @@
     { "file": "multiple_choice.json" },
     { "file": "truefalse.json" },
     { "file": "matching_pictures.json" },
-    { "file": "fill_in_the_blank.json" }
+    { "file": "fill_in_the_blank.json" },
+    { "file": "fill_in_the_blank_list.json" }
+
   ],
 
   "emailRecipients": ["utsab.das@austincc.edu"],
