--- a/settings.json
+++ b/settings.json
@@ -13,7 +13,7 @@
     { "file": "truefalse.json" },
     { "file": "matching_pictures.json" },
     { "file": "fill_in_the_blank.json" },
-    //{ "file": "fill_in_the_blank_list.json" },
+    { "file": "fill_in_the_blank_list.json" },
     { "file": "short_answer.json" }
 
   ],
