Only fill in the blank questions

--- a/settings.json
+++ b/settings.json
@@ -8,13 +8,13 @@
   "userFolder": "Fall2025-03",
 
   "sections": [
-    { "file": "matching.json" },
-    { "file": "multiple_choice.json" },
-    { "file": "truefalse.json" },
-    { "file": "matching_pictures.json" },
-    { "file": "fill_in_the_blank.json" },
-    { "file": "fill_in_the_blank_list.json" },
-    { "file": "short_answer.json" }
+    //{ "file": "matching.json" },
+    //{ "file": "multiple_choice.json" },
+    //{ "file": "truefalse.json" },
+    //{ "file": "matching_pictures.json" },
+    { "file": "fill_in_the_blank.json" }//,
+    //{ "file": "fill_in_the_blank_list.json" },
+    //{ "file": "short_answer.json" }
 
   ],
 
